# badger-rs

./: .gitignore  Cargo.toml  README.md  build.rs  justfile  rust-toolchain
.cargo/: config.toml
apps/blinky/: Cargo.toml  build.rs
apps/blinky/src/: main.rs
apps/ferris/: Cargo.toml
apps/ferris/src/: main.rs
apps/hid-keyboard/: Cargo.toml
apps/hid-keyboard/src/: main.rs
apps/usb-serial/: Cargo.toml
apps/usb-serial/src/: main.rs
crates/st7789/: Cargo.toml
crates/st7789/src/: lib.rs  types.rs
crates/uc8151/: Cargo.toml
crates/uc8151/src/: lib.rs
device/: Cargo.toml  rust-toolchain
device/usb-raw/: Cargo.toml  build.rs
device/usb-raw/src/: main.rs
host/: Cargo.toml
host/lsusb/: Cargo.toml
host/lsusb/src/: main.rs
src/: main.rs  task.rs
