[workspace]
members = [
    "apps/blinky",
    "apps/ferris",
    "crates/st7789"
]

resolver = "2"

[workspace.dependencies]
cortex-m = { version = "0.7.7" }
cortex-m-rt = { version = "0.7.4" }
defmt = { version = "0.3.7" }
defmt-rtt = { version = "0.4.1" }
display-interface = { version = "0.4.1" }
display-interface-spi = { version = "0.4.1" }
embedded-hal = { version = "0.2.7" }
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
rp-pico = { version = "0.9.0" }

st7789 = { path = "crates/st7789" }
