[workspace]
members = [
    "apps/blinky",
    "apps/hid-keyboard"
]

resolver = "2"

[workspace.dependencies]
cortex-m = { version = "0.7.7" }
cortex-m-rt = { version = "0.7.3" }
defmt = { version = "0.3.6" }
defmt-rtt = { version = "0.4.0" }
embedded-hal = { version = "1.0.0" }
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
portable-atomic = { version = "1.6.0", features = ["critical-section"] }

embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }

[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
