[package]
name = "ferris"
version = "0.1.0"
authors = ["Andreas Doerr"]
description = "Firmware for the Pimoroni 2040"
repository = "https://github.com/adoerr/badger-rs.git"
license = "GPL-3.0-only"
edition = "2021"
keywords = ["firmware", "RP2040", "Pimoroni"]
categories = ["embedded", "hardware-support"]

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
display-interface = { workspace = true }
display-interface-spi = { workspace = true }
embedded-hal = { workspace = true }
panic-probe = { workspace = true }
rp-pico = { workspace = true, features = ["rt"] }
st7789 = { workspace = true }
